Adding Job API Routes
