# docs/swagger.yaml
@@ -10,6 +10,26 @@ definitions:
     - description
     - name
     type: object
+  request.JobCreateRequest:
+    properties:
+      businessAccountId:
+        type: string
+      category:
+        type: string
+      description:
+        type: string
+      name:
+        minLength: 2
+        type: string
+      price:
+        type: number
+    required:
+    - businessAccountId
+    - category
+    - description
+    - name
+    - price
+    type: object
   request.JwtCreateRequest:
     properties:
       userID:
@@ -62,6 +82,25 @@ definitions:
       updatedAt:
         type: string
       userID:
+        type: string
+    type: object
+  response.JobResponse:
+    properties:
+      _id:
+        type: string
+      businessAccountId:
+        type: string
+      category:
+        type: string
+      createdAt:
+        type: string
+      description:
+        type: string
+      name:
+        type: string
+      price:
+        type: number
+      updatedAt:
         type: string
     type: object
   response.JwtResponse:
@@ -156,6 +195,58 @@ paths:
       summary: This method used for saving new business account
       tags:
       - Business Accounts
+  /api/v1/alpha/job:
+    get:
+      consumes:
+      - application/json
+      description: get all jobs
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/response.JobResponse'
+            type: array
+        "400":
+          description: Bad Request
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      summary: This method used for get all jobs
+      tags:
+      - Jobs
+    post:
+      consumes:
+      - application/json
+      description: saving new job
+      parameters:
+      - description: Handle Request Body
+        in: body
+        name: requestBody
+        schema:
+          $ref: '#/definitions/request.JobCreateRequest'
+      - description: Bearer {token}
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      summary: This method used for saving new job
+      tags:
+      - Jobs
   /api/v1/alpha/jwt:
     get:
       consumes:
