# internal/alpha.com/application/handler/job/command.go
@@ -1,0 +1,10 @@
+package job
+
+type Command struct {
+	Id                string
+	BusinessAccountID string
+	Name              string
+	Description       string
+	Price             float32
+	Category          string
+}
